--- a/frontend/src/pages/edit_ad/styles.scss
+++ b/frontend/src/pages/edit_ad/styles.scss
@@ -3,7 +3,7 @@ $inputHeight: 43px;
     position: relative;
     display: grid;
     height: 100%;
-    grid-template-rows: 140px calc(100% - 140px);
+    grid-template-rows: $headerHeight calc(100% - 140px);
     header {
         position: relative;
         width: 100%;
@@ -16,8 +16,11 @@ $inputHeight: 43px;
         align-items: center;
         h1 {
             position: relative;
-            font-weight: 400;
-            font-size: 22pt;
+            font-family: Roboto;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 35px;
+            line-height: 41px;
         }
     }
     .edit_ad_container {
@@ -66,10 +69,11 @@ $inputHeight: 43px;
                 box-sizing: border-box;
                 border-radius: 10px;
                 outline: none;
+                font-family: Roboto;
                 font-style: normal;
                 font-weight: normal;
-                font-size: 18px;
-                line-height: 21px;
+                font-size: 16px;
+                line-height: 19px;
                 padding-left: 10px;
                 padding-right: 10px;
                 color: $textColor;
@@ -78,6 +82,11 @@ $inputHeight: 43px;
                 box-shadow: none;
                 &::placeholder {
                     color: $placeholderColor;
+                    font-family: Roboto;
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 16px;
+                    line-height: 19px;
                 }
                 &:focus {
                     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
