--- a/frontend/src/pages/create_ad/style.scss
+++ b/frontend/src/pages/create_ad/style.scss
@@ -103,6 +103,7 @@
             }
             &:focus {
                 box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.1);
+                border-color: #DED3ED;
             }
         }
         input {
@@ -206,9 +207,6 @@
                     text-indent: 1px;
                     text-overflow: '';
                     cursor: pointer;
-                    option {
-                        border: 2px solid $blurColor;
-                    }
                 }
                 #time {
                     position: relative;
