--- a/frontend/src/pages/edit_ad/styles.scss
+++ b/frontend/src/pages/edit_ad/styles.scss
@@ -62,9 +62,12 @@ $inputHeight: 43px;
             grid-template-columns: 20% 80%;
             width: 100%;
             max-height: 100%;
+            padding-top: 10px;
+            padding-bottom: 10px;
             overflow: auto;
             input,
             textarea {
+                position: relative;
                 border: 2px solid $blurColor;
                 box-sizing: border-box;
                 border-radius: 10px;
@@ -90,6 +93,7 @@ $inputHeight: 43px;
                 }
                 &:focus {
                     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+                    border-color: $mainColor;
                 }
             }
             .left_block {
@@ -163,11 +167,11 @@ $inputHeight: 43px;
                     position: relative;
                     width: 95%;
                     height: 231px;
+                    margin-top: 14px;
                 }
                 #description {
                     width: 100%;
                     height: 100%;
-                    margin-top: 14px;
                     outline: none;
                     resize: none;
                     padding: 10px;
@@ -180,15 +184,11 @@ $inputHeight: 43px;
                     justify-content: flex-start;
                     align-content: center;
                     flex-wrap: wrap;
-                    margin-top: 14px;
+                    margin-top: 14px !important;
                     .video_url_wrapper,
                     .product_url_wrapper {
                         position: relative;
                         width: 70%;
-                        height: $inputHeight;
-                    }
-                    .product_url_wrapper {
-                        margin-top: 14px;
                     }
                     #video_url,
                     #product_url {
