--- a/frontend/src/pages/home/_home_page_styles.scss
+++ b/frontend/src/pages/home/_home_page_styles.scss
@@ -13,7 +13,7 @@ section {
         height: 100%;
         margin: 0 auto;
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: center;
         h1 {
             position: relative;
@@ -22,6 +22,10 @@ section {
             font-weight: 300;
             font-size: 35px;
             line-height: 41px;
+        }
+        .button_wrapper {
+            position: relative;
+            width: 70px;
         }
     }
     .content_wrapper {
