--- a/frontend/src/scss/colors.scss
+++ b/frontend/src/scss/colors.scss
@@ -3,3 +3,5 @@ $textColor: #6b5e6c;
 $blurColor: #ececec;
 $focusColor: #6b5e6c;
 $placeholderColor: #d2d2d2;
+$activeColor: transparent;
+$pausedColor: transparent;
